migrating to gh-pages repo for github.io hosting

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <ul>
-      <li><a href="/game-of-life">Game Of Life</a></li>
+      <li><a href="/resources/public/templates/game-of-life">Game Of Life</a></li>
     </ul>
   </body>
 </html>
