moved to cljs-games

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
   </head>
   <body>
-    <ul>
-      <li><a href="resources/public/templates/game-of-life.html">Game Of Life</a></li>
-    </ul>
+      <p>Moved to <a href="http://spradnyesh.github.io/cljs-games/">cljs-games</a></p>
   </body>
 </html>
